enabled comments through utterances

--- a/config.yaml
+++ b/config.yaml
@@ -42,6 +42,11 @@ params:
     comments:
         enabled: true
         provider: utterances
+        utterances:
+            repo: antidreamgirl/antidreamgirl-ca
+            issueTerm: pathname
+            label: comment
+            theme: preferred-color-scheme
 
     widgets:
         enabled:
